--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # The canonical out-of-tree build subdirectory
 build
 
+# Directories
+.vs/
+bin/
+bin-intermediates/
+
+
 # Visual Studio clutter
 _ReSharper*
 *.sdf
